--- a/index.html
+++ b/index.html
@@ -3,27 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
-    <title>Frontend Mentor | Intro component with sign up form</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Intro component with sign up form</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="page-container">
     <main class="main-page">
@@ -37,25 +18,18 @@
         </p>
       </div>
       <div class="page-right">
-        <header>Try it free 7 days then $20/mo. thereafter</header>
-        <label>First Name </label> <br />
-        <label>Last Name </label><br />
-        <label>Email Address</label><br />
-        <label>Password</label><br />
-        <footer>
-          <div></div>
-          Claim your free trial By clicking the button, you are agreeing to our
-          Terms and Services
-        </footer>
+        <p>Try it free 7 days then $20/mo. thereafter</p>
+        <form action="">
+          <input type="text" placeholder="First Name" />
+          <input type="text" placeholder="Last Name" />
+          <input type="email" placeholder="Email Address" />
+          <input type="password" placeholder="Password" />
+          <button type="submit">Claim your free trial</button>
+        </form>
+        <p>
+          By clicking the button, you are agreeing to our Terms and Services
+        </p>
       </div>
     </main>
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
   </body>
 </html>
