--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
   <body class="page-container">
     <main class="main-page">
       <div class="page-left">
-        <h3>
-          Learn to code by watching others See how experienced developers solve
-        </h3>
+        <h1>
+          Learn to code by <br />
+          watching others
+        </h1>
         <p>
-          problems in real-time. Watching scripted tutorials is great, but
-          understanding how developers think is invaluable.
+          See how experienced developers solve problems in real-time <br />
+          Watching scripted tutorials is great, but understanding how <br />
+          developers think is invaluable.
         </p>
       </div>
       <div class="page-right">
-        <p>Try it free 7 days then $20/mo. thereafter</p>
-        <form action="">
-          <input type="text" placeholder="First Name" />
-          <input type="text" placeholder="Last Name" />
-          <input type="email" placeholder="Email Address" />
-          <input type="password" placeholder="Password" />
-          <button type="submit">Claim your free trial</button>
-        </form>
+        <p class="page-header">Try it free 7 days then $20/mo. thereafter</p>
+        <div class="form-section">
+          <form action="" class="form">
+            <input type="text" placeholder="First Name" />
+            <input type="text" placeholder="Last Name" />
+            <input type="email" placeholder="Email Address" />
+            <input type="password" placeholder="Password" />
+            <button type="submit">Claim your free trial</button>
+          </form>
+        </div>
         <p>
           By clicking the button, you are agreeing to our Terms and Services
         </p>
