--- a/index.html
+++ b/index.html
@@ -22,12 +22,27 @@
       <div class="page-right">
         <p class="page-header">Try it free 7 days then $20/mo. thereafter</p>
         <div class="form-section">
-          <form action="" class="form">
-            <input type="text" placeholder="First Name" />
-            <input type="text" placeholder="Last Name" />
-            <input type="email" placeholder="Email Address" />
-            <input type="password" placeholder="Password" />
-            <button type="submit">Claim your free trial</button>
+          <form action="">
+            <input
+              type="text"
+              id="fname"
+              name="firstname"
+              placeholder="First Name"
+            />
+            <input
+              type="text"
+              id="lname"
+              name="lastname"
+              placeholder="Last Name"
+            />
+            <input type="text" id="email" name="email" placeholder="Email" />
+            <input
+              type="text"
+              id="lname"
+              name="password"
+              placeholder="password"
+            />
+            <input type="submit" value="Claim your free trial" />
           </form>
         </div>
         <p>
