--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               type="text"
               id="lname"
               name="password"
-              placeholder="password"
+              placeholder="Password"
             />
             <input type="submit" value="Claim your free trial" />
             <p>
