--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
               name="password"
               placeholder="Password"
             />
-            <input type="submit" value="Claim your free trial" />
-            <p>
+            <input type="submit" value="CLAIM YOUR FREE TRIAL" />
+            <p class="terms">
               By clicking the button, you are agreeing to our Terms and Services
             </p>
           </form>
