--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </p>
       </div>
       <div class="page-right">
-        <p class="page-header">Try it free 7 days then $20/mo. thereafter</p>
+        <p class="page-header">
+          <span class="page-header-span">Try it free 7 days</span> then $20/mo. thereafter
+        </p>
         <div class="form-section">
           <form action="">
             <input
@@ -43,8 +45,9 @@
               placeholder="Password"
             />
             <input type="submit" value="CLAIM YOUR FREE TRIAL" />
-            <p class="terms">
-              By clicking the button, you are agreeing to our Terms and Services
+            <p>
+              By clicking the button, you are agreeing to our
+              <span class="terms">Terms and Services</span>
             </p>
           </form>
         </div>
