--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       </div>
       <div class="page-right">
         <p class="page-header">
-          <span class="page-header-span">Try it free 7 days</span> then $20/mo. thereafter
+          <span class="page-header-span">Try it free 7 days</span> then $20/mo.
+          thereafter
         </p>
         <div class="form-section">
           <form action="">
@@ -47,7 +48,7 @@
             <input type="submit" value="CLAIM YOUR FREE TRIAL" />
             <p>
               By clicking the button, you are agreeing to our
-              <span class="terms">Terms and Services</span>
+              <span class="terms"> <strong>Terms and Services</strong></span>
             </p>
           </form>
         </div>
