--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
+  <body class="main-page">
     <main>
       <section id="text">
         <h1>Learn to code by<br />watching others</h1>
