--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body class="main-page">
-    <main>
+  <body class="main-body">
+    <main class="main-page">
       <section id="text">
         <h1>Learn to code by<br />watching others</h1>
         <p>
