--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body class="main-body">
     <main class="main-page">
-      <section id="text">
+      <section class="text-section">
         <h1>Learn to code by<br />watching others</h1>
         <p>
           See how experienced developers solve problems in real-time. Watching
