--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <p class="error-text">Password cannot be empty</p>
           </div>
           <button type="submit">Claim your free trial</button>
-          <p id="terms">
+          <p class="terms-services">
             By clicking the button, you are agreeing to our
             <a href="#">Terms and Services</a>
           </p>
