javascript functional creation

--- a/index.html
+++ b/index.html
@@ -31,45 +31,50 @@
         </div>
         <form action="#" id="form">
           <div class="infield">
-            <input type="text" placeholder="First Name" />
+            <input type="text" placeholder="First Name" id="first-name" />
             <img
               src="./images/icon-error.svg"
               alt="icon-error"
               class="error-image"
+              id="error-image-first-name"
             />
-            <p class="error-text">First Name cannot be empty</p>
+            <p class="error-text" id="error-text-first-name">First Name cannot be empty</p>
           </div>
           <div class="infield">
-            <input type="text" placeholder="Last Name" />
+            <input type="text" placeholder="Last Name" id="last-name" />
             <img
               src="./images/icon-error.svg"
               alt="icon-error"
               class="error-image"
+              id="error-image-last-name"
             />
-            <p class="error-text">Last Name cannot be empty</p>
+            <p class="error-text" id="error-text-last-name">Last Name cannot be empty</p>
           </div>
           <div class="infield">
             <input
               type="text"
               placeholder="Email Address"
               class="input-email"
+              id="email"
             />
             <img
               src="./images/icon-error.svg"
               alt="icon-error"
               class="error-image"
+              id="error-image-email"
             />
-            <p class="error-text">Looks like this is not an email</p>
-            <p class="error-email">Email cannot be empty</p>
+            <p class="error-text" id="error-text-email">Looks like this is not an email</p>
+            <p class="error-email" id="email-example">email@example.com</p>
           </div>
           <div class="infield">
-            <input type="password" placeholder="Password" />
+            <input type="password" placeholder="Password" id="password" />
             <img
               src="./images/icon-error.svg"
               alt="icon-error"
               class="error-image"
+              id="error-image-password"
             />
-            <p class="error-text">Password cannot be empty</p>
+            <p class="error-text" id="error-text-password">Password cannot be empty</p>
           </div>
           <button type="submit">Claim your free trial</button>
           <p class="terms-services">
